--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <div class="jumbotron jumbotron-fluid">
     <div class="container">
-      <h1 class="display-4">Giftastic</h1>
+      <h1 class="display-4">GifTastic</h1>
       <p class="lead">Click a button or search for a certain animal you'd like! </p>
     </div>
   </div>
